Updated frontpage and phrasing main and subtitle

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -37,7 +37,7 @@
 	% Print title
 	\textcolor{Sienna}{\MainTitleMarkup}\\[\baselineskip] 
 	% Print subtitle
-	{\color{RosyBrown}\SubTitleMarkup}\\ 
+	{\color{RosyBrown}\SubTitleMarkup}
 	% Print bottom curly bracket
 	{%
 		\color{LightGoldenrod}
@@ -50,7 +50,7 @@
 	}{ % then 
 		\ClassWarning{Frontpage}{FrontPageImage is not defined!}
 	}{ % else
-		\includegraphics[width=\TitleBoxLength]{\FrontPageImage}
+		\includegraphics[width=0.9\linewidth]{\FrontPageImage}
 	}
 	\vfill
 	% Print author
