--- a/thesis.tex
+++ b/thesis.tex
@@ -18,9 +18,9 @@
 \input{frontpage.tex}
 
 %\def\MainTitle{Towards the evolution of Open Educational Resources}
-\def\MainTitle{Survival of the fittest in the OER jungle}
+\def\MainTitle{Survival of the fittest in the jungle of Open~Educational~Resources}
 %\def\SubTitle{Curriculum sequencing using genetic algorithms with an increasing gene pool}
-\def\SubTitle{Genetic curriculum sequencing from a growing gene pool}
+\def\SubTitle{Genetic curriculum sequencing from an open gene pool}
 \def\FrontPageImage{images/evolution.jpeg}
 \def\Author{Martin Sander Latour}
 
