Added numbering for subsections

--- a/thesis.tex
+++ b/thesis.tex
@@ -22,6 +22,9 @@
 % Required for clickable citations
 \usepackage{hyperref}
 
+% Set numbering up till subsection level
+\setcounter{secnumdepth}{2}
+
 %-----------------------------
 % Chapter style declarations
 %-----------------------------
