Refactored, added figures and literature and wrote itemizes for approach

--- a/literature.bib
+++ b/literature.bib
@@ -28,3 +28,23 @@
   year={2011},
   organization={ACM}
 }
+
+@article{AlMuhaideb2011}
+  title={Evolutionary computation approaches to the Curriculum Sequencing problem},
+  author={Al-Muhaideb, Sarab and Menai, Mohamed El Bachir},
+  journal={Natural Computing},
+  volume={10},
+  number={2},
+  pages={891--920},
+  year={2011},
+  publisher={Springer}
+}
+
+@book{Eiben2007,
+  author = {Eiben, A.E. and Smith, J.E.},
+  publisher = {Springer-Verlag, Berlin},
+  series = {Natural Computing},
+  title = {{Introduction to Evolutionary Computing}},
+  year = 2007
+}
+
