--- a/thesis.tex
+++ b/thesis.tex
@@ -116,7 +116,9 @@
 \input{chapters/introduction.tex}
 \chapter{Related Work}
 \input{chapters/related_work.tex}
-\chapter{Modeling Approach}
+\chapter{Educational Task}
+\input{chapters/educational_task.tex}
+\chapter{Approach: Genetic algorithm}
 \input{chapters/modeling_approach.tex}
 \chapter{Comparison With Other Approaches}
 \input{chapters/comparison_with_other_approaches.tex}
