Refactored, added figures and algorithm and continued to work on approach

--- a/thesis.tex
+++ b/thesis.tex
@@ -7,6 +7,9 @@
 \usepackage{framed, color}
 \definecolor{shadecolor}{rgb}{1.0, 0.95, 0.80}
 
+% Required for pseudo algorithm listings
+\usepackage{algpseudocode}
+
 % Required for many graphical operations
 \usepackage{graphicx}
 
@@ -118,10 +121,8 @@
 \input{chapters/related_work.tex}
 \chapter{Educational Task}
 \input{chapters/educational_task.tex}
-\chapter{Approach: Genetic algorithm}
-\input{chapters/modeling_approach.tex}
-\chapter{Comparison With Other Approaches}
-\input{chapters/comparison_with_other_approaches.tex}
+\chapter{Approach}
+\input{chapters/approach.tex}
 \chapter{The TutOER Software}
 \input{chapters/the_tutoer_software.tex}
 \chapter{Simulations}
