--- a/thesis.tex
+++ b/thesis.tex
@@ -25,8 +25,9 @@
 % Required for clickable citations
 \usepackage{hyperref}
 
-% Set numbering up till subsection level
-\setcounter{secnumdepth}{2}
+% Set numbering up till subsubsection level
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{2}
 
 %-----------------------------
 % Chapter style declarations
