Worked on approach

--- a/literature.bib
+++ b/literature.bib
@@ -48,3 +48,24 @@
   year = 2007
 }
 
+@article{Jin2005,
+  title={A comprehensive survey of fitness approximation in evolutionary computation},
+  author={Jin, Yaochu},
+  journal={Soft computing},
+  volume={9},
+  number={1},
+  pages={3--12},
+  year={2005},
+  publisher={Springer}
+}
+
+@article{Whitley1994,
+  title={A genetic algorithm tutorial},
+  author={Whitley, Darrell},
+  journal={Statistics and computing},
+  volume={4},
+  number={2},
+  pages={65--85},
+  year={1994},
+  publisher={Springer}
+}
