--- a/thesis.tex
+++ b/thesis.tex
@@ -116,6 +116,10 @@
 %%%%%%%%%%%%%%%
 % Main matter %
 %%%%%%%%%%%%%%%
+
+%keywords:
+% curriculum sequencing, OER, evidence-based, genetic algorithm
+
 \chapter{Introduction}
 \input{chapters/introduction.tex}
 \chapter{Related Work}
