--- a/literature.bib
+++ b/literature.bib
@@ -69,3 +69,12 @@
   year={1994},
   publisher={Springer}
 }
+
+@incollection{Whiteson2012,
+  title={Evolutionary Computation for Reinforcement Learning},
+  author={Whiteson, Shimon},
+  booktitle={Reinforcement Learning},
+  pages={325--355},
+  year={2012},
+  publisher={Springer}
+}
