Bulk commit, god will forgive me.

--- a/literature.bib
+++ b/literature.bib
@@ -29,7 +29,7 @@
   organization={ACM}
 }
 
-@article{AlMuhaideb2011}
+@article{AlMuhaideb2011,
   title={Evolutionary computation approaches to the Curriculum Sequencing problem},
   author={Al-Muhaideb, Sarab and Menai, Mohamed El Bachir},
   journal={Natural Computing},
@@ -77,4 +77,15 @@
   pages={325--355},
   year={2012},
   publisher={Springer}
+}
+
+@article{Hutt2007,
+  title={Synapsing variable-length crossover: Meaningful crossover for variable-length genomes},
+  author={Hutt, Ben and Warwick, Kevin},
+  journal={Evolutionary Computation, IEEE Transactions on},
+  volume={11},
+  number={1},
+  pages={118--131},
+  year={2007},
+  publisher={IEEE}
 }
