--- a/thesis.tex
+++ b/thesis.tex
@@ -35,6 +35,9 @@
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{2}
 
+% Define the argmax function
+\DeclareMathOperator*{\argmax}{arg\,max}
+
 %-----------------------------
 % Chapter style declarations
 %-----------------------------
@@ -142,6 +145,7 @@
 \label{ch:experimental_setup}
 \input{chapters/experimental_setup.tex}
 \chapter{Results}
+\label{ch:results}
 \input{chapters/results.tex}
 \chapter{Analysis}
 \input{chapters/analysis.tex}
