--- a/literature.bib
+++ b/literature.bib
@@ -89,3 +89,76 @@
   year={2007},
   publisher={IEEE}
 }
+
+@article{Auer2002,
+  title={Finite-time analysis of the multiarmed bandit problem},
+  author={Auer, Peter and Cesa-Bianchi, Nicolo and Fischer, Paul},
+  journal={Machine learning},
+  volume={47},
+  number={2-3},
+  pages={235--256},
+  year={2002},
+  publisher={Springer}
+}
+
+@inproceedings{Hovakimyan2004,
+  title={Genetic algorithm and the problem of getting knowledge in e-Learning systems},
+  author={Hovakimyan, Anna and Sargsyan, Siranush and Barkhoudaryan, Sergey},
+  booktitle={Advanced Learning Technologies, 2004. Proceedings. IEEE International Conference on},
+  pages={336--339},
+  year={2004},
+  organization={IEEE}
+}
+
+@article{Seki2005,
+  title={An adaptive sequencing method of the learning objects for the e-learning environment},
+  author={Seki, Kazuya and Matsui, Tatsunori and Okamoto, Toshio},
+  journal={Electronics and Communications in Japan (Part III: Fundamental Electronic Science)},
+  volume={88},
+  number={3},
+  pages={54--71},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+@article{Chen2008,
+  title={Intelligent web-based learning system with personalized learning path guidance},
+  author={Chen, Chih-Ming},
+  journal={Computers \& Education},
+  volume={51},
+  number={2},
+  pages={787--814},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{Chen2009,
+  title={Ontology-based concept map for planning a personalised learning path},
+  author={Chen, Chih-Ming},
+  journal={British Journal of Educational Technology},
+  volume={40},
+  number={6},
+  pages={1028--1058},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{Huang2007,
+  title={Constructing a personalized e-learning system based on genetic algorithm and case-based reasoning approach},
+  author={Huang, Mu-Jung and Huang, Hwa-Shan and Chen, Mu-Yen},
+  journal={Expert Systems with Applications},
+  volume={33},
+  number={3},
+  pages={551--564},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@inproceedings{Samia2007,
+  title={Re-use of resources for adapted formation to the learner},
+  author={Samia, Azough and Mostafa, Bellafkih},
+  booktitle={Computational Intelligence and Intelligent Informatics, 2007. ISCIII'07. International Symposium on},
+  pages={213--217},
+  year={2007},
+  organization={IEEE}
+}
