Batch commit before first draft submit of introduction

--- a/literature.bib
+++ b/literature.bib
@@ -162,3 +162,365 @@
   year={2007},
   organization={IEEE}
 }
+
+@techreport{Bussemaker2014,
+	title = {Kamerbrief over digitalisering van het hoger onderwijs},
+	author = {Bussemaker, Jet},
+	year = {2014},
+	month = {1},
+	type = {Kamerbrief},
+	institution = {{Ministerie van Onderwijs, Cultuur en Wetenschap}},
+	url = {http://www.rijksoverheid.nl/documenten-en-publicaties/kamerstukken/2014/01/08/kamerbrief-over-digitalisering-van-het-hoger-onderwijs.html}
+}
+
+@proceedings{Trendsurfoe2014,
+	title = {{2014 Open Education Trend Report}},
+	editor = {Woert, Nicolai van der and Jacobi, Ria and Jelgerhuis, Hester},
+	year = {2014},
+	month = {3},
+	type = {Trend Report},
+	institution = {{SURF, Special Interest Group Open Education}},
+	url = {http://www.surf.nl/trendreportopeneducation2014}
+}
+
+@article{OECD2007,
+	author = {{OECD}},
+    year = 2007,
+	title ={{Giving Knowledge for Free: The Emergence of Open Educational Resources}},
+    url = {http://www.oecd.org/edu/ceri/givingknowledgeforfreetheemergenceofopeneducationalresources.htm},
+	publisher = "OECD Publishing"
+}
+
+@article{Johnson2013,
+  title={The {NMC} horizon report: 2013 higher education edition},
+  author={Johnson, Larry and Adams, Samantha and Cummins, Malcolm and Estrada, Victoria and Freeman, Alex and Ludgate, Holly},
+  year={2013}
+}
+
+@article{Duval2010,
+	author = {Duval, Erik and Wiley, David},
+	title = {{Guest Editorial: Open Educational Resources}},
+	journal ={IEEE Transactions on Learning Technologies},
+	volume = {3},
+	number = {2},
+	issn = {1939-1382},
+	year = {2010},
+	pages = {83-84},
+	doi = {http://doi.ieeecomputersociety.org/10.1109/TLT.2010.11},
+	publisher = {IEEE Computer Society},
+	address = {Los Alamitos, CA, USA},
+}
+
+@incollection{Wiley2014,
+	year={2014},
+	isbn={978-1-4614-3184-8},
+	booktitle={{Handbook of Research on Educational Communications and
+		Technology}},
+	editor={Spector, J. Michael and Merrill, M. David and Elen, Jan and Bishop, M. J.},
+	doi={10.1007/978-1-4614-3185-5_63},
+	title={{Open Educational Resources: A Review of the Literature}},
+	url={http://dx.doi.org/10.1007/978-1-4614-3185-5_63},
+	publisher={Springer New York},
+	keywords={Open educational resources; Reuse; Remix; Affordability},
+	author={Wiley, David and Bliss, T.J. and McEwen, Mary},
+	pages={781-789},
+	language={English}
+}
+
+@article{Yuan2013,
+  title={{MOOCs} and open education: {Implications} for higher education},
+  author={Yuan, Li and Powell, Stephen},
+  journal={Cetis White Paper},
+  year={2013}
+}
+
+@article{Caswell2008,
+	author = {Tom Caswell and Shelley Henson and Marion Jensen and David Wiley},
+	title = {Open Content and Open Educational Resources: Enabling universal education},
+	journal = {The International Review of Research in Open and Distance Learning},
+	volume = {9},
+	number = {1},
+	year = {2008},
+}
+
+@article{Abelson2008,
+  title={The creation of OpenCourseWare at MIT},
+  author={Abelson, Hal},
+  journal={Journal of Science Education and Technology},
+  volume={17},
+  number={2},
+  pages={164--174},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{Hylen2012,
+	author = {Hyl\'{e}n, Jan and Damme, Dirk van and Mulder, Fred and D'Antoni,
+		Susan},
+	title = {{Open Educational Resources: Analysis of Responses to the OECD Country Questionnaire}},
+	doi = {http://dx.doi.org/10.1787/5k990rjhvtlv-en},
+	publisher = {OECD Publishing},
+	year = {2012},
+	month = {06}
+}
+
+@article{Ochoa2009,
+  title={Quantitative analysis of learning object repositories},
+  author={Ochoa, Xavier and Duval, Erik},
+  journal={Learning Technologies, IEEE Transactions on},
+  volume={2},
+  number={3},
+  pages={226--238},
+  year={2009},
+  publisher={IEEE}
+}
+
+@incollection{Vidal2004,
+  title={Learning Objects Interoperability: The Ariadne Experience},
+  author={Vidal, Philippe and Broisin, Julien and Duval, Erick and Ternier, Stefaan},
+  booktitle={Building the Information Society},
+  pages={551--556},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{McGreal2004,
+  title={Learning objects: A practical definition},
+  author={McGreal, Rory},
+  journal={International Journal of Instructional Technology and Distance Learning (IJITDL)},
+  volume={9},
+  number={1},
+  year={2004}
+}
+
+@incollection{Duval2006,
+  title={LearnRank: Towards a real quality measure for learning},
+  author={Duval, Erik},
+  booktitle={Handbook on quality and standardisation in E-learning},
+  pages={457--463},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{Ochoa2009,
+  title={Automatic evaluation of metadata quality in digital repositories},
+  author={Ochoa, Xavier and Duval, Erik},
+  journal={International Journal on Digital Libraries},
+  volume={10},
+  number={2-3},
+  pages={67--91},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{Tani2013,
+  title={Dealing with metadata quality: The legacy of digital library efforts},
+  author={Tani, Alice and Candela, Leonardo and Castelli, Donatella},
+  journal={Information Processing \& Management},
+  volume={49},
+  number={6},
+  pages={1194--1205},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{Sicilia2005,
+  title={Complete metadata records in learning object repositories: some evidence and requirements},
+  author={Sicilia, Miguel A and Garcia, Elena and Pag{\'e}s, Carmen and Martinez, Jose J},
+  journal={International Journal of Learning Technology},
+  volume={1},
+  number={4},
+  pages={411--424},
+  year={2005},
+  publisher={Inderscience}
+}
+
+@incollection{Cechinel2009,
+  title={Empirical analysis of errors on human-generated learning objects metadata},
+  author={Cechinel, Cristian and S{\'a}nchez-Alonso, Salvador and Sicilia, Miguel {\'A}ngel},
+  booktitle={Metadata and semantic research},
+  pages={60--70},
+  year={2009},
+  publisher={Springer}
+}
+
+@inproceedings{Ochoa2006,
+  title={Use of contextualized attention metadata for ranking and recommending learning objects},
+  author={Ochoa, Xavier and Duval, Erik},
+  booktitle={Proceedings of the 1st international workshop on Contextualized attention metadata: collecting, managing and exploiting of rich usage information},
+  pages={9--16},
+  year={2006},
+  organization={ACM}
+}
+
+@article{Kay2007,
+  title={Evaluating the learning in learning objects},
+  author={Kay, Robin H and Knaack, Liesel},
+  journal={Open Learning},
+  volume={22},
+  number={1},
+  pages={5--28},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+
+@article{Collis2004,
+  title={Technology and human issues in reusing learning objects},
+  author={Collis, Betty and Strijker, Allard},
+  journal={Journal of interactive media in education},
+  volume={2004},
+  number={1},
+  year={2004}
+}
+
+@article{Clow2013,
+	author = {Clow, Doug},
+	title = {An overview of learning analytics},
+	journal = {Teaching in Higher Education},
+	volume = {18},
+	number = {6},
+	pages = {683-695},
+	year = {2013},
+	doi = {10.1080/13562517.2013.827653}
+}
+
+@article{Wayman2005,
+  title={Involving teachers in data-driven decision making: Using computer data systems to support teacher inquiry and reflection},
+  author={Wayman, Jeffrey C},
+  journal={Journal of Education for Students Placed at Risk},
+  volume={10},
+  number={3},
+  pages={295--308},
+  year={2005},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{Spillane2012,
+  title={Data in practice: Conceptualizing the data-based decision-making phenomena},
+  author={Spillane, James P},
+  journal={American Journal of Education},
+  volume={118},
+  number={2},
+  pages={113--141},
+  year={2012},
+  publisher={JSTOR}
+}
+
+@article{Marsh2006,
+  title={Making sense of data-driven decision making in education},
+  author={Marsh, Julie A and Pane, John F and Hamilton, Laura S},
+  year={2006},
+  publisher={Rand Corporation}
+}
+
+@incollection{Latour2014,
+  title={Open Education, Big Data and Learning Analytics},
+  author={Latour, Sander and Schuwer, Robert},
+  booktitle={2014 Open Education Trend Report},
+  pages={48--53},
+  year={2014},
+  publisher={SURF}
+}
+
+@inproceedings{Brusilovsky1992,
+  title={A framework for intelligent knowledge sequencing and task sequencing},
+  author={Brusilovsky, Peter L},
+  booktitle={Intelligent tutoring systems},
+  pages={499--506},
+  year={1992},
+  organization={Springer}
+}
+
+@article{Quinn2000,
+  title={Learning objects and instruction components},
+  author={Quinn, Clark and Hobbs, Samantha},
+  journal={Educational Technology \& Society},
+  volume={3},
+  number={2},
+  pages={13--20},
+  year={2000}
+}
+
+@inproceedings{deMarcos2007,
+  title={Competency-based learning object sequencing using particle swarms},
+  author={de-Marcos, Luis and Martinez, JJ and Gutierrez, JA and others},
+  booktitle={Tools with Artificial Intelligence, 2007. ICTAI 2007. 19th IEEE International Conference on},
+  volume={2},
+  pages={111--116},
+  year={2007},
+  organization={IEEE}
+}
+
+@article{Hilton2010,
+  title={The four ‘R’s of openness and ALMS analysis: frameworks for open educational resources},
+  author={Hilton III, John and Wiley, David and Stein, Jared and Johnson, Aaron},
+  journal={Open Learning},
+  volume={25},
+  number={1},
+  pages={37--44},
+  year={2010},
+  publisher={Taylor \& Francis}
+}
+
+@article{Zemsky2004,
+  title={Thwarted innovation},
+  author={Zemsky, Robert and Massy, William F},
+  journal={What happened to e-learning and why, A final report for the Weather station Project of the Learning Alliance at the University of Pennsylvania in cooperation with the Thomson Corporation, Pennsylvania},
+  year={2004}
+}
+
+@techreport{Camilleri2014,
+	title = {{State of the Art Review of Quality Issues related to Open
+		Educational Resources (OER)}},
+	author = {Camilleri, A. F. and Ehlers, U. D. and Pawlowski, J.},
+	year = {2014},
+	type = {JRC Scientific and policy reports},
+	institution = {{European Commission}},
+	doi = {10.2791/80171}
+	url = {http://is.jrc.ec.europa.eu/pages/EAP/documents/201405JRC88304.pdf}
+}
+
+@article{Weller2010,
+  title={Big and little OER},
+  author={Weller, Martin},
+  journal={2010 Proceedings. Barcelona: UOC, OU, BYU. [Accessed: 25/05/14].},
+  url={http://hdl.handle.net/10609/4851},
+  year={2010}
+}
+
+@book{Holland1992,
+  title={Adaptation in natural and artificial systems: an introductory analysis with applications to biology, control, and artificial intelligence},
+  author={Holland, J. H.},
+  isbn={9780262581110},
+  series={Bradford Books},
+  year={1992},
+  publisher={MIT Press}
+}
+
+@book{Sutton1998,
+  title={Introduction to reinforcement learning},
+  author={Sutton, Richard S and Barto, Andrew G},
+  year={1998},
+  publisher={MIT Press}
+}
+
+@book{Psotka1988,
+  title={Intelligent tutoring systems: Lessons learned},
+  author={Psotka, Joseph and Massey, Leonard Daniel and Mutter, Sharon A},
+  year={1988},
+  publisher={Psychology Press}
+}
+
+@incollection{Brusilovsky2007,
+	year={2007},
+	booktitle={The Adaptive Web},
+	volume={4321},
+	series={Lecture Notes in Computer Science},
+	editor={Brusilovsky, Peter and Kobsa, Alfred and Nejdl, Wolfgang},
+	doi={10.1007/978-3-540-72079-9_22},
+	title={{Open Corpus Adaptive Educational Hypermedia}},
+	publisher={Springer Berlin Heidelberg},
+	author={Brusilovsky, Peter and Henze, Nicola},
+	pages={671-696}
+}
