--- a/literature.bib
+++ b/literature.bib
@@ -524,3 +524,31 @@
 	author={Brusilovsky, Peter and Henze, Nicola},
 	pages={671-696}
 }
+
+@inproceedings{Meire2007,
+  title={Samgi: Automatic metadata generation v2. 0},
+  author={Meire, Michael and Ochoa, Xavier and Duval, Erik},
+  booktitle={{World Conference on Educational Multimedia, Hypermedia and Telecommunications}},
+  volume={2007},
+  number={1},
+  pages={1195--1204},
+  year={2007}
+}
+
+@incollection{Chatti2008,
+  title={ALOA: A web services driven framework for automatic learning object annotation},
+  author={Chatti, Mohamed Amine and Muhammad, Nanda Firdausi and Jarke, Matthias},
+  booktitle={Times of Convergence. Technologies Across Learning Contexts},
+  pages={86--91},
+  year={2008},
+  publisher={Springer}
+}
+
+@inproceedings{Cechinel2012,
+  title={Populating learning object repositories with hidden internal quality information},
+  author={Cechinel, Cristian and da Silva Camargo, Sandro and Ochoa, Xavier and Sicilia, MA and Sanchez-Alonso, S},
+  booktitle={Proceedings of the 2nd Workshop on Recommender Systems for Technology Enhanced Learning (RecSysTEL 2012). Manouselis, N., Draschler, H., Verber, K., and Santos, OC (Eds.). Published by CEUR Workshop Proceedings},
+  volume={896},
+  pages={11--22},
+  year={2012}
+}
