--- a/thesis.tex
+++ b/thesis.tex
@@ -3,6 +3,9 @@
 % Required to specify font color
 \usepackage[svgnames]{xcolor}
 
+% Required for dashed lines in tabular
+\usepackage{arydshln}
+
 % Required to make colored boxes
 \usepackage{framed, color}
 \definecolor{shadecolor}{rgb}{1.0, 0.95, 0.80}
