--- a/literature.bib
+++ b/literature.bib
@@ -264,7 +264,7 @@
 	month = {06}
 }
 
-@article{Ochoa2009,
+@article{Ochoa2009a,
   title={Quantitative analysis of learning object repositories},
   author={Ochoa, Xavier and Duval, Erik},
   journal={Learning Technologies, IEEE Transactions on},
@@ -302,7 +302,7 @@
   publisher={Springer}
 }
 
-@article{Ochoa2009,
+@article{Ochoa2009b,
   title={Automatic evaluation of metadata quality in digital repositories},
   author={Ochoa, Xavier and Duval, Erik},
   journal={International Journal on Digital Libraries},
