--- a/thesis.tex
+++ b/thesis.tex
@@ -24,6 +24,9 @@
 % Required for good typesetting in PDF
 \usepackage{microtype}
 
+% Required for rotated tables
+\usepackage{rotating}
+
 % Required for subtables
 \usepackage{caption}
 \usepackage{subcaption}
@@ -190,9 +193,6 @@
 \chapter{Nim Test Questions}
 \label{ax_questions}
 \input{chapters/appendix_questions.tex}
-\chapter{Simulation Fitness Models}
-\label{ax_simulation_fitness_models}
-\input{chapters/appendix_fitness_models.tex}
 \chapter{Simulation Convergence Data}
 \label{ax_simulation_convergence_data}
 \input{chapters/appendix_convergence_data.tex}
